--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "AllowedHosts": "*"
-  /*
+
   "ConnectionStrings": {
-    "2_semester_projekt":
-      "User ID=postgres;Password=qrm49zyp;Host=localhost;Port=5432;Database=2_semester_projekt;"
-    // skal conn string stå her?
+    "2_semester_projekt": "User ID=postgres;Password=qrm49zyp;Host=localhost;Port=5432;Database=2_semester_projekt;",
+    ;,
+    "azure": "User ID=adminbruger;Password=!hej1234;Host=misfitsfestival-db.postgres.database.azure.com;Port=5432;Database=misfits;"
+    ;
   }
-  */
 }
